fix mapstruct